--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "animated-scroll-to": "^2.0.5",
     "axios": "^0.19.2",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
+    "recompose": "^0.30.0",
     "xml2js": "^0.4.23"
   },
   "scripts": {
