--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hotkeys": "^2.0.0",
     "react-scripts": "3.4.0",
     "recompose": "^0.30.0",
     "xml2js": "^0.4.23"
