--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animated-scroll-to": "^2.0.5",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-hotkeys": "^2.0.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.4.1",
+    "react-scrubber": "^1.0.0",
     "recompose": "^0.30.0",
+    "rsuite": "^4.3.4",
     "xml2js": "^0.4.23"
   },
   "scripts": {
