--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "animated-scroll-to": "^2.0.5",
     "axios": "^0.19.2",
+    "customize-cra": "^0.9.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-hotkeys": "^2.0.0",
     "react-scripts": "3.4.1",
@@ -19,10 +23,10 @@
     "xml2js": "^0.4.23"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
