--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "customize-cra": "^0.9.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-hotkeys": "^2.0.0",
+    "react-player": "^2.0.1",
     "react-scripts": "3.4.1",
     "react-scrubber": "^1.0.0",
     "recompose": "^0.30.0",
