--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-dom": "^16.13.1",
     "react-hotkeys": "^2.0.0",
     "react-player": "^2.0.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scrubber": "^1.0.0",
     "recompose": "^0.30.0",
     "rsuite": "^4.3.4",
+    "typescript": "^4.0.3",
     "xml2js": "^0.4.23"
   },
   "scripts": {
