--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/recompose": "^0.30.7",
     "animated-scroll-to": "^2.0.5",
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
@@ -16,6 +17,7 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-hotkeys": "^2.0.0",
+    "react-indexed-db": "^1.0.12",
     "react-player": "^2.0.1",
     "react-scripts": "^3.4.3",
     "react-scrubber": "^1.0.0",
